# macpp

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE.md  README.md  SECURITY.md  vcpkg.json
.github/workflows/: deb.yml  nsis.yml  rpm.yml
bench/: CMakeLists.txt  bench_Conn.cpp  bench_Vendor.cpp
cmake/: ConfigHPP.cmake  ConfigUninstall.cmake  FetchArgparse.cmake  GeneratePackages.cmake  InstallArtifacts.cmake  MakeManual.cmake  TC_GCC.cmake  TC_MSVC.cmake  Uninstall.cmake.in  argparse.cmake  catch2.cmake  config_hpp.cmake  config_uninstall.cmake  cpack.cmake  curl.cmake  install.cmake  manual.cmake  sqlite3.cmake  uninstall.cmake.in
cmake/toolchain/: gcc.cmake  msvc.cmake
core/: CMakeLists.txt  Reader.cpp  Registry.cpp  Stmt.cpp  Vendor.cpp  dir.cpp  out.cpp  utils.cpp
core/cache/: Conn.cpp  ConnR.cpp  ConnRW.cpp  Stmt.cpp  StmtPool.cpp
core/update/: Downloader.cpp  Reader.cpp
doc/: build_linux.md  build_windows.md  macpp.1.md
include/: Conn.hpp  ConnR.hpp  ConnRW.hpp  FinalAction.hpp  Registry.hpp  SQLite.hpp  Updater.hpp  Vendor.hpp  cache.hpp  config.hpp.in  download.hpp  exception.hpp  out.hpp  utils.hpp
include/cache/: Conn.hpp  ConnR.hpp  ConnRW.hpp  Stmt.hpp  StmtPool.hpp
include/update/: Downloader.hpp  Reader.hpp  Updater.hpp
src/: AppError.cpp  AppError.hpp  Conn.cpp  ConnR.cpp  ConnRW.cpp  Downloader.cpp  SQLite.cpp  Stmt.cpp  Vendor.cpp  Vendor.hpp  cache.cpp  cache.hpp  config.hpp.in  dir.cpp  dir.hpp  download.cpp  download.hpp  json.cpp  json.hpp  main.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_Conn.cpp  test_Registry.cpp  test_Stmt.cpp  test_StmtPool.cpp  test_Updater.cpp  test_Vendor.cpp  test_cache.cpp  test_download.cpp  test_exception.cpp  test_utils.cpp
tests/internal/: internal.cpp  internal.hpp
tests/testdata/: malformed.csv  not_cache.txt  poisoned.csv  poisoned.sql  poisoned.sql.in  sample.sql  sample.sql.in  update.csv
